# animClip

./: CMakeLists.txt  README.md
plugins/2019/: animClip.mll
plugins/2022/: animClip.mll
plugins/2023/: animClip.mll
sources/: loadAnimClipCommand.cpp  loadAnimClipCommand.h  main.cpp  saveAnimClipCommand.cpp  saveAnimClipCommand.h  utils.h
